deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpwaterius
  namespace: httpwaterius
spec:
  selector:
    matchLabels:
      app: httpwaterius
  replicas: 1
  template:
    metadata:
      labels:
        app: httpwaterius
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
      containers:
      - name: httpwaterius
        image: grffio/httpwaterius
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
        resources:
          limits:
            cpu: "1"
            memory: "256Mi"
          requests:
            cpu: "0.5"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: httpwaterius
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: httpwaterius
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpwaterius
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - waterius.sipleg.ru
    secretName: httpwaterius-tls
  rules:
  - host: waterius.sipleg.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpwaterius
            port:
              number: 8080
